--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,68 +1,47 @@
-# docker-compose.yml
 version: '3.8'
 
 services:
   web:
-    build: .
-    command: sh -c "
-      python manage.py wait_for_db &&
-      python manage.py migrate &&
-      python manage.py collectstatic --noinput &&
-      granian --interface asgi --host 0.0.0.0 --port 8000 --workers 4 core.asgi:application
-      "
+    build:
+      context: .
+      dockerfile: Dockerfile
+    command: granian --interface wsgi --host 0.0.0.0 --port 8000 core.wsgi:application --workers 4
     volumes:
-      - .:/app  # For development only, remove in production
-      - static_volume:/app/staticfiles:rw
-      - media_volume:/app/media:rw
-    environment:
-      - DJANGO_SETTINGS_MODULE=core.settings
-      - PYTHONPATH=/app
-      - CSRF_TRUSTED_ORIGINS=https://yourdomain.com,http://localhost
-    expose:
-      - 8000
+      - .:/app
+      - static_volume:/app/staticfiles
+      - media_volume:/app/mediafiles
+    ports:
+      - "8000:8000"
     env_file:
-      - .env.production
+      - .env
+    environment:
+      - DB_HOST=db
+      - REDIS_URL=redis://redis:6379/0
+      - DJANGO_SETTINGS_MODULE=core.settings.development
     depends_on:
       - db
-    deploy:
-      resources:
-        limits:
-          cpus: '2'
-          memory: 2G
-    restart: unless-stopped
+      - redis
 
   db:
     image: postgres:15-alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    env_file:
-      - .env.production
-    deploy:
-      resources:
-        limits:
-          cpus: '1'
-          memory: 1G
-    restart: unless-stopped
-
-  nginx:
-    image: nginx:1.25-alpine
-    volumes:
-      - static_volume:/app/staticfiles:ro
-      - media_volume:/app/media:ro
-      - ./nginx:/etc/nginx/conf.d:ro
+    environment:
+      - POSTGRES_DB=${DB_NAME}
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
     ports:
-      - "80:80"
-      - "443:443"
-    depends_on:
-      - web
-    deploy:
-      resources:
-        limits:
-          cpus: '0.5'
-          memory: 512M
-    restart: unless-stopped
+      - "5432:5432"
+
+  redis:
+    image: redis:7-alpine
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
 
 volumes:
   postgres_data:
+  redis_data:
   static_volume:
   media_volume:
