--- a/requirements.txt
+++ b/requirements.txt
@@ -6,18 +6,22 @@ anthropic==0.36.0
 anyio==4.6.2
 asgiref==3.8.1
 attrs==24.2.0
+black==23.12.1
 cachetools==5.5.0
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.3.2
+click==8.1.7
 colorama==0.4.6
 cryptography==43.0.1
+decorator==4.4.2
 diff-match-patch==20230430
 distro==1.9.0
 Django==5.1.1
 django-allauth==65.0.2
 django-ckeditor==6.7.1
 django-ckeditor-5==0.2.14
+django-cors-headers==4.6.0
 django-extensions==3.2.3
 django-import-export==4.1.1
 django-ipware==7.0.1
@@ -25,6 +29,7 @@ django-js-asset==2.2.0
 django-microsoft-auth==3.0.1
 django-sslserver==0.22
 filelock==3.16.1
+flake8==6.1.0
 frozenlist==1.4.1
 fsspec==2024.9.0
 geoip2==4.8.0
@@ -34,42 +39,74 @@ google-auth==2.35.0
 google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.1
 googleapis-common-protos==1.65.0
+granian==1.6.3
 h11==0.14.0
 httpcore==1.0.6
 httplib2==0.22.0
 httpx==0.27.2
 huggingface-hub==0.25.2
 idna==3.10
+imageio==2.36.0
+imageio-ffmpeg==0.5.1
+iniconfig==2.0.0
+Jinja2==3.1.4
 jiter==0.6.1
+llvmlite==0.43.0
 MarkupSafe==2.1.5
 maxminddb==2.6.2
+mccabe==0.7.0
+more-itertools==10.5.0
+moviepy==1.0.3
+mpmath==1.3.0
 multidict==6.1.0
+mypy==1.13.0
+mypy-extensions==1.0.0
 mysql-connector-python==9.1.0
+networkx==3.4.2
+numba==0.60.0
+numpy==2.0.2
 oauthlib==3.2.2
 openai==1.51.2
+openai-whisper==20240930
 packaging==24.1
+pathspec==0.12.1
 pillow==10.4.0
+platformdirs==4.3.6
+pluggy==1.5.0
+proglog==0.1.10
 proto-plus==1.24.0
 protobuf==5.28.2
 psycopg2-binary==2.9.9
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
+pycodestyle==2.11.1
 pycparser==2.22
 pydantic==2.9.2
 pydantic_core==2.23.4
+pydub==0.25.1
+pyflakes==3.1.0
 PyJWT==2.9.0
+PyMySQL==1.1.1
 pyOpenSSL==24.2.1
 pyparsing==3.2.0
+pytest==7.4.4
 python-decouple==3.8
 python-ipware==3.0.0
+pytube==15.0.0
 PyYAML==6.0.2
+qrcode==8.0
+redis==5.2.0
+regex==2024.11.6
 requests==2.32.3
 requests-oauthlib==2.0.0
 rsa==4.9
 sniffio==1.3.1
 sqlparse==0.5.1
+sympy==1.13.1
 tablib==3.5.0
+tiktoken==0.8.0
 tokenizers==0.20.1
+torch==2.5.1
 tqdm==4.66.5
 typing_extensions==4.12.2
 tzdata==2024.2
@@ -77,5 +114,7 @@ ua-parser==0.18.0
 uritemplate==4.1.1
 urllib3==2.2.3
 user-agents==2.2.0
+uvloop==0.21.0
 Werkzeug==3.0.4
 yarl==1.13.1
+yt-dlp==2024.11.4
