--- a/requirements.txt
+++ b/requirements.txt
@@ -19,15 +19,19 @@ diff-match-patch==20230430
 distro==1.9.0
 Django==5.1.1
 django-allauth==65.0.2
+django-axes==7.0.0
 django-ckeditor==6.7.1
 django-ckeditor-5==0.2.14
 django-cors-headers==4.6.0
+django-debug-toolbar==4.4.6
 django-extensions==3.2.3
 django-import-export==4.1.1
 django-ipware==7.0.1
 django-js-asset==2.2.0
 django-microsoft-auth==3.0.1
+django-redis==5.4.0
 django-sslserver==0.22
+django-storages==1.14.4
 filelock==3.16.1
 flake8==6.1.0
 frozenlist==1.4.1
@@ -114,7 +118,7 @@ ua-parser==0.18.0
 uritemplate==4.1.1
 urllib3==2.2.3
 user-agents==2.2.0
-uvloop==0.21.0
+#uvloop==0.21.0
 Werkzeug==3.0.4
 yarl==1.13.1
 yt-dlp==2024.11.4
