--- a/requirements.txt
+++ b/requirements.txt
@@ -196,7 +196,7 @@ uri-template==1.3.0
 uritemplate==4.1.1
 urllib3==2.2.3
 user-agents==2.2.0
-uvloop==0.21.0
+#uvloop==0.21.0
 wcwidth==0.2.13
 webcolors==24.8.0
 webencodings==0.5.1
