--- a/requirements.txt
+++ b/requirements.txt
@@ -51,6 +51,7 @@ django-sslserver==0.22
 django-storages==1.14.4
 django-taggit==6.1.0
 executing==2.1.0
+Faker==33.3.0
 fastjsonschema==2.20.0
 filelock==3.16.1
 flake8==6.1.0
@@ -196,7 +197,7 @@ uri-template==1.3.0
 uritemplate==4.1.1
 urllib3==2.2.3
 user-agents==2.2.0
-#uvloop==0.21.0
+uvloop==0.21.0
 wcwidth==0.2.13
 webcolors==24.8.0
 webencodings==0.5.1
